
* GtkFileChooser:
 - The search has been reintegrated in the UI, there is now
   a toggle button on the header bar to go to search mode,
   in addition to the Alt-S shortcut.
 - The file chooser button now accepts files by drag-and-drop properly.

* GtkScrolledWindow has gained a new ::edge-reached signal, which
  triggers when the edge of the scrollable area is reached.

* CSS:
 - Performance improvements

* OpenGL:
 - It is now possible to specify the required GL version, as well
   as some other options (debug, forward compatible) when creating
   a GdkGLContext
 - Support for the OpenGL legacy profile has been dropped. Most examples
   have been updated, with the exception of gdkgears, which will be fixed
   in the next snapshot
 - Use shader version 1.50

* Mir backend: Many improvements

* Bugs fixed:
 712752 GtkClipboard: add _get_default and _get_primary
 725164 [crash] update_current_folder_get_info_cb at gtkfilechooserwidget.c
 732051 Crash can result if a child widget is destroyed while its tab is...
 735316 Default font antialiasing results in wrong behavior on OS X
 740336 Wrong (white) background colour in notes grid
 740613 XConvertSelection crashes Gtk+ apps
 742636 Freeze if window closed while resume-events pending
 742953 GdkGLContext will not create a core context
 743146 Crash in gdk_gl_texture_from_surface() when a GtkGLArea is packe...
 743193 Fix transfer annotation for tree_model parameter of gtk_tree_get...
 743229 clipboard: support selection notification on wayland
 743257 Popover not dismissed on clicking the header bar
 743286 Mention that the path returned by gtk_tree_row_reference_get_pat...
 743330 Wintab initialization glitches
 743341 GtkImage does not correctly reflect icon theme changes.
 743393 DND icons don't work in the inspector
 743422 valgrind: Conditional jump or move depends on uninitialised valu...
 743451 Drag and drop on GtkFileChooserButton doesn't work
 743592 crash on link click in about dialogue