@@ -165,7 +165,7 @@ G_DEFINE_AUTOPTR_CLEANUP_FUNC(GtkSeparator, g_object_unref)
 G_DEFINE_AUTOPTR_CLEANUP_FUNC(GtkSeparatorMenuItem, g_object_unref)
 G_DEFINE_AUTOPTR_CLEANUP_FUNC(GtkSeparatorToolItem, g_object_unref)
 G_DEFINE_AUTOPTR_CLEANUP_FUNC(GtkSettings, g_object_unref)
-G_DEFINE_AUTOPTR_CLEANUP_FUNC(GtkSidebar, g_object_unref)
+G_DEFINE_AUTOPTR_CLEANUP_FUNC(GtkStackSidebar, g_object_unref)
 G_DEFINE_AUTOPTR_CLEANUP_FUNC(GtkSizeGroup, g_object_unref)
 G_DEFINE_AUTOPTR_CLEANUP_FUNC(GtkSpinButton, g_object_unref)
 G_DEFINE_AUTOPTR_CLEANUP_FUNC(GtkSpinner, g_object_unref)
