@@ -230,7 +230,7 @@ gtk/gtkselection.c
 gtk/gtkseparator.c
 gtk/gtkseparatortoolitem.c
 gtk/gtksettings.c
-gtk/gtksidebar.c
+gtk/gtkstacksidebar.c
 gtk/gtksizegroup.c
 gtk/gtksocket.c
 gtk/gtkspinbutton.c
