@@ -231,7 +231,7 @@ gtk/gtkselection.c
 gtk/gtkseparator.c
 gtk/gtkseparatortoolitem.c
 gtk/gtksettings.c
-gtk/gtksidebar.c
+gtk/gtkstacksidebar.c
 gtk/gtksizegroup.c
 gtk/gtksizerequest.c
 gtk/gtksocket.c
