@@ -19,6 +19,8 @@ Overview of Changes in GTK+ 3.15.5
 * GtkScrolledWindow has gained a new ::edge-reached signal, which
   triggers when the edge of the scrollable area is reached.
 
+* GtkSidebar was renamed to GtkStackSidebar to better convey what it does
+
 * CSS:
  - Performance improvements
 
